--- a/style-rtl.css
+++ b/style-rtl.css
@@ -5,7 +5,7 @@ Theme URI: https://themegrill.com/themes/colormag/
 Author: ThemeGrill
 Author URI: https://themegrill.com
 Description: ColorMag is always the best choice when it comes to magazine, news, and blog WordPress themes. You can create elegant and modern websites for news portals, online magazines, and publishing sites. With ColorMag’s 8 and counting free starter demos for health, food, entertainment, sports, and fashion industries, building a magazine style website is super easy. Best of all, the ColorMag WordPress theme offers multiple ad spaces in its layout. So, you can monetize your website by displaying ads in these slots without any fuss. And if you plan to sell products and services online, you can rely on the theme’s compatibility with WooCommerce. Some of its key features are:  >> SEO Optimized >> Translation & RTL Ready >> Cross-browser Compatible >> Custom Widgets >> Responsive Design >> Sticky Menu. So, download the free ColorMag theme and create professional magazine websites quickly. You can get free support for ColorMag at https://themegrill.com/contact/ and check our demos at https://themegrilldemos.com/colormag/
-Version: 4.0.0
+Version: 4.0.1
 Tested up to: 6.6
 Requires PHP: 7.4
 License: GNU General Public License, version 3 (GPLv3)
@@ -1568,10 +1568,25 @@ table td {
 	.cm-mobile-row {
 		display: block;
 	}
+	.cm-footer.cm-footer-builder .cm-footer-top-row {
+		padding-bottom: 8px;
+	}
 	.cm-footer.cm-footer-builder .cm-footer-top-row .cm-top-row {
+		gap: 4px;
 		grid-template-columns: 1fr;
 	}
+	.cm-footer.cm-footer-builder .cm-footer-main-row {
+		padding: 8px 0;
+	}
 	.cm-footer.cm-footer-builder .cm-footer-main-row .cm-main-row {
+		gap: 4px;
+		grid-template-columns: 1fr;
+	}
+	.cm-footer.cm-footer-builder .cm-footer-bottom-row {
+		padding-top: 8px;
+	}
+	.cm-footer.cm-footer-builder .cm-footer-bottom-row .cm-bottom-row {
+		gap: 4px;
 		grid-template-columns: 1fr;
 	}
 }
